--- a/poker.html
+++ b/poker.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Poker</title>
-  <link rel = "stylesheet" href="poker.css">
+  <link rel = "stylesheet" href="./poker.css">
 </head>
 
 
@@ -91,6 +91,6 @@
     </tr>
 
   </table>
-  <script type="module" src="js/app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 </html>
