--- a/poker.html
+++ b/poker.html
@@ -77,20 +77,25 @@
         <button class="button" id="allin" disabled>オールイン</button>
       </td>
       <td class="cell">
-        <button class="button" id="bet" disabled>ベット</button>
-      </td>
-      <td class="cell">
-        <button class="button" id="raeise" disabled>レイズ</button>
+        <button class="button" id="raise_bet" disabled >ベット/レイズ</button>
       </td>
       <td class="cell">
         <button class="button" id="call" disabled>コール</button>
       </td>
       <td class="cell">
+        <button class="button" id="check" disabled>チェック</button>
+      </td>
+      <td class="cell">
         <button class="button" id="fold" disabled>フォールド</button>
       </td>
     </tr>
+    <tr>
+      <td class="cell" colspan="5">
+        <button class="button" id="replay" disabled>Replay</button>
+    </tr>
+    
 
   </table>
-  <script type="module" src="./app.js"></script>
+  <script type="module" src="app.js"></script>
 </body>
 </html>
