--- a/poker.html
+++ b/poker.html
@@ -91,7 +91,7 @@
     </tr>
     <tr>
       <td class="cell" colspan="5">
-        <button class="button" id="replay" disabled>Replay</button>
+        <button class="button r" id="replay" disabled>Replay</button>
       </td>
     </tr>
     
